--- a/app/src/main/res/layout/activity_book_maraton.xml
+++ b/app/src/main/res/layout/activity_book_maraton.xml
@@ -9,15 +9,6 @@
     android:orientation="vertical"
     tools:context=".BookMaraton.BookMaratonActivity">
 
-
-    <Button
-        android:id="@+id/btn_make_maraton_done"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/textview"
-        android:text="독서 마라톤 시작하기" />
-
-
     <LinearLayout
         android:id="@+id/book_maraton_add_L"
         android:layout_width="match_parent"
@@ -55,6 +46,7 @@
                 android:layout_weight="1"
                 android:background="@drawable/textview"
                 android:text="책 추가 +" />
+
             <Button
                 android:id="@+id/btn_maratonbook_add_search"
                 android:layout_width="0dp"
@@ -97,7 +89,7 @@
                 android:inputType="date"
                 android:maxLength="8"
                 android:textAlignment="center"
-                android:textSize="15dp"/>
+                android:textSize="15dp" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -114,16 +106,32 @@
                 android:inputType="date"
                 android:maxLength="8"
                 android:textAlignment="center"
-                android:textSize="15dp"/>
+                android:textSize="15dp" />
         </LinearLayout>
 
-        <ListView
-            android:id="@+id/book_maraton_ListView"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="5dp" />
+            android:layout_height="match_parent">
+
+            <ListView
+                android:id="@+id/book_maraton_ListView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_above="@id/btn_make_maraton_done"
+                android:layout_margin="5dp" />
+
+            <Button
+                android:id="@+id/btn_make_maraton_done"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:background="@drawable/textview"
+
+                android:text="독서 마라톤 시작하기" />
+
+        </RelativeLayout>
+
 
     </LinearLayout>
-
 
 </LinearLayout>
