--- a/app/src/main/res/layout/activity_user_info.xml
+++ b/app/src/main/res/layout/activity_user_info.xml
@@ -7,6 +7,25 @@
     android:background="@color/lightGray"
     tools:context=".UserInfoActivity">
 
+    <ImageButton
+        android:id="@+id/btn_google_change_photo"
+        android:layout_width="130dp"
+        android:layout_height="130dp"
+        android:layout_above="@id/text_view_google_direction"
+        android:layout_centerHorizontal="true"
+        android:background="@drawable/ic_change_photo" />
+
+    <TextView
+        android:id="@+id/text_view_google_direction"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/btn_google_logout"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="50dp"
+        android:textSize="14dp"
+        android:text="프로필 사진 변경"
+        android:textColor="@color/blackSoft" />
+
     <Button
         android:id="@+id/btn_google_logout"
         android:layout_width="200dp"
