--- a/app/src/main/res/layout/fragment_menu1.xml
+++ b/app/src/main/res/layout/fragment_menu1.xml
@@ -39,8 +39,8 @@
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:layout_marginLeft="10dp"
-            app:civ_border_color="#FF000000"
-            app:civ_border_width="2dp" />
+            android:src="@drawable/ic_person"
+            app:civ_border_color="#FF000000" />
 
         <TextView
             android:id="@+id/text_view_menu1_profile_name"
@@ -80,8 +80,8 @@
         android:layout_marginTop="20dp"
         android:layout_weight="1"
         android:gravity="center"
-        android:text="독서마라톤 관련"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:text="독서마라톤 관련">
 
         <TextView
             android:id="@+id/maratonProgressText"
@@ -89,10 +89,10 @@
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:gravity="center"
-            android:text="독서마라톤 진행률 "
-            android:textColor="@color/black"
-            android:textSize="30dp"
-            android:visibility="invisible"/>
+            android:text="독서마라톤 진행률"
+            android:textColor="@color/blackSoft"
+            android:textSize="18dp"
+            android:visibility="invisible" />
 
         <ProgressBar
             android:id="@+id/maratonProgressBar"
@@ -106,18 +106,17 @@
             android:max="100"
             android:progress="50"
             android:progressTint="@color/primary"
-            android:visibility="invisible"/>
+            android:visibility="invisible" />
 
         <TextView
             android:id="@+id/maratonProgressNot"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
-            android:text="진행중인 마라톤이 없습니다."
-            android:textSize="30dp"
-            android:textColor="@color/black"
-            android:visibility="visible"/>
-
+            android:text="독서 마라톤을 시작해보세요"
+            android:textColor="@color/blackSoft"
+            android:textSize="22dp"
+            android:visibility="visible" />
 
 
     </RelativeLayout>
@@ -130,26 +129,26 @@
 
         <Button
             android:id="@+id/btn_menu1_recommend"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_marginRight="30dp"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:layout_marginRight="20dp"
             android:layout_toLeftOf="@id/btn_menu1_my_board"
             android:background="@drawable/ic_oval"
             android:text="추천글" />
 
         <Button
             android:id="@+id/btn_menu1_my_board"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
             android:layout_centerHorizontal="true"
             android:background="@drawable/ic_oval"
             android:text="내가 쓴 글" />
 
         <Button
             android:id="@+id/btn_menu1_my_chat"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_marginLeft="30dp"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:layout_marginLeft="20dp"
             android:layout_toRightOf="@id/btn_menu1_my_board"
             android:background="@drawable/ic_oval"
             android:text="참여한 채팅" />
