--- a/app/src/main/res/layout/fragment_menu1.xml
+++ b/app/src/main/res/layout/fragment_menu1.xml
@@ -5,6 +5,15 @@
     android:background="@color/lightGray"
     android:orientation="vertical">
 
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="20dp"
+        android:layout_weight="1"
+        android:background="@color/primaryDeep"
+        android:src="@drawable/logo_plus" />
+
     <Button
         android:id="@+id/btn_menu1_ranked_book"
         android:layout_width="match_parent"
@@ -19,14 +28,19 @@
         android:textSize="16dp"
         android:textStyle="bold" />
 
-    <ImageView
+    <Button
+        android:id="@+id/btn_menu1_notice"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_gravity="center"
-        android:layout_marginTop="20dp"
-        android:layout_weight="1"
-        android:background="@color/primaryDeep"
-        android:src="@drawable/logo_plus" />
+        android:layout_height="56dp"
+        android:background="@drawable/button"
+        android:shadowColor="#A8A8A8"
+        android:shadowDx="0"
+        android:shadowDy="0"
+        android:shadowRadius="5"
+        android:text="공지사항"
+        android:textColor="@color/white"
+        android:textSize="16dp"
+        android:textStyle="bold" />
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -130,7 +144,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:gravity="center_horizontal">
 
             <Button
                 android:id="@+id/btn_menu1_recommend"
