--- a/app/src/main/res/layout/activity_my_board.xml
+++ b/app/src/main/res/layout/activity_my_board.xml
@@ -3,31 +3,38 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/lightGray">
+    android:background="@color/white">
 
-    <TextView
-        android:id="@+id/text_view_search_board"
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar_myBoard"
         android:layout_width="match_parent"
         android:layout_height="56dp"
-        android:background="@drawable/textview"
-        android:gravity="center_vertical"
-        android:paddingLeft="10dp"
-        android:text="내가 쓴 게시글"
-        android:textColor="@color/blackSoft"
-        android:textSize="16dp" />
+        android:background="#ffffff"
+        android:elevation="1dp"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
+
+        <TextView
+            android:id="@+id/text_view_myBoard"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="내 정보"
+            android:textStyle="bold"
+            android:textSize="20sp"/>
+    </android.support.v7.widget.Toolbar>
 
     <TextView
         android:id="@+id/text_view_search_count"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/text_view_search_board"
+        android:layout_below="@id/toolbar_myBoard"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
         android:text="00의 게시물 수 : 00"
         android:textSize="15dp" />
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler_search"
+        android:id="@+id/recycler_myBoard"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/text_view_search_count"
