--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,29 +8,38 @@
     android:background="@color/primaryDeep"
     tools:context=".LoginActivity">
 
-
     <ImageView
         android:id="@+id/image_login_logo"
-        android:layout_width="250dp"
-        android:layout_height="250dp"
+        android:layout_width="230dp"
+        android:layout_height="230dp"
         android:layout_centerInParent="true"
         android:background="@drawable/logo_plus" />
 
-
     <com.google.android.gms.common.SignInButton
         android:id="@+id/btn_google_login"
-        android:layout_width="200dp"
+        android:layout_width="210dp"
         android:layout_height="wrap_content"
         android:layout_below="@id/image_login_logo"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="30dp">
+        android:layout_marginTop="10dp">
 
     </com.google.android.gms.common.SignInButton>
+
+    <Button
+        android:id="@+id/btn_guest"
+        android:layout_width="200dp"
+        android:layout_height="40dp"
+        android:layout_below="@id/btn_google_login"
+        android:background="@drawable/loginbutton"
+        android:layout_centerHorizontal="true"
+        android:text="게스트로 들어가기"
+        android:textColor="#6f6f6f"
+        android:textStyle="bold"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/btn_google_login"
+        android:layout_below="@id/btn_guest"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
         android:text="원활한 서비스를 위해\n로그인이 필요합니다."
