--- a/app/src/main/res/layout/fragment_menu1.xml
+++ b/app/src/main/res/layout/fragment_menu1.xml
@@ -2,177 +2,46 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/lightGray"
+    android:background="@color/white"
     android:orientation="vertical">
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_gravity="center"
-        android:layout_marginTop="20dp"
-        android:layout_weight="1"
-        android:background="@color/primaryDeep"
-        android:src="@drawable/logo_plus" />
-
-    <Button
-        android:id="@+id/btn_menu1_ranked_book"
-        android:layout_width="match_parent"
-        android:layout_height="56dp"
-        android:background="@drawable/button"
-        android:shadowColor="#A8A8A8"
-        android:shadowDx="0"
-        android:shadowDy="0"
-        android:shadowRadius="5"
-        android:text="추천도서 TOP 30"
-        android:textColor="@color/white"
-        android:textSize="16dp"
-        android:textStyle="bold" />
-
-    <Button
-        android:id="@+id/btn_menu1_notice"
-        android:layout_width="match_parent"
-        android:layout_height="56dp"
-        android:background="@drawable/button"
-        android:shadowColor="#A8A8A8"
-        android:shadowDx="0"
-        android:shadowDy="0"
-        android:shadowRadius="5"
-        android:text="공지사항"
-        android:textColor="@color/white"
-        android:textSize="16dp"
-        android:textStyle="bold" />
-
     <RelativeLayout
+        android:id="@+id/layout_recommend_btn"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginTop="20dp"
-        android:layout_weight="0.7">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp">
 
-        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/image_menu1_profile_image"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_marginLeft="10dp"
-            android:src="@drawable/ic_person"
-            app:civ_border_color="#FF000000" />
-
-        <TextView
-            android:id="@+id/text_view_menu1_profile_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="10dp"
-            android:layout_toRightOf="@id/image_menu1_profile_image"
-            android:text="유저 이름"
-            android:textColor="@color/blackSoft"
-            android:textSize="18dp" />
-
-        <TextView
-            android:id="@+id/text_view_menu1_profile_email"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/text_view_menu1_profile_name"
-            android:layout_alignLeft="@id/text_view_menu1_profile_name"
-            android:text="유저 이메일"
-            android:textColor="@color/blackSoft"
-            android:textSize="12dp" />
-
-        <ImageButton
-            android:id="@+id/image_btn_menu1_profile_settings"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="10dp"
-            android:background="@drawable/ic_settings_black_24dp"
-            android:backgroundTint="@color/blackSoft" />
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginTop="20dp"
-        android:layout_weight="1"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:text="독서마라톤 관련">
-
-        <TextView
-            android:id="@+id/maratonProgressText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:gravity="center"
-            android:text="독서마라톤 진행률"
-            android:textColor="@color/blackSoft"
-            android:textSize="18dp"
-            android:visibility="invisible" />
-
-        <ProgressBar
-            android:id="@+id/maratonProgressBar"
-            style="?android:attr/progressBarStyleHorizontal"
-            android:layout_width="fill_parent"
+        <Button
+            android:id="@+id/btn_recommend_bestseller"
+            android:layout_width="100dp"
             android:layout_height="50dp"
-            android:layout_centerInParent="true"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="50dp"
-            android:layout_marginRight="50dp"
-            android:max="100"
-            android:progress="50"
-            android:progressTint="@color/primary"
-            android:visibility="invisible" />
+            android:background="@drawable/button"
+            android:text="베스트셀러" />
 
-        <TextView
-            android:id="@+id/maratonProgressNot"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:text="독서 마라톤을 시작해보세요"
-            android:textColor="@color/blackSoft"
-            android:textSize="22dp"
-            android:visibility="visible" />
+        <Button
+            android:id="@+id/btn_recommend_new"
+            android:layout_width="100dp"
+            android:layout_height="50dp"
+            android:layout_toRightOf="@id/btn_recommend_bestseller"
+            android:background="@drawable/button"
+            android:text="신간 도서" />
 
+        <Spinner
+            android:id="@+id/spinner_recommend_category"
+            android:layout_width="150dp"
+            android:layout_height="50dp"
+            android:layout_alignParentEnd="true"
+            android:entries="@array/카테고리" />
 
     </RelativeLayout>
-
-    <RelativeLayout
+<!--
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_view_recommend"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginTop="20dp"
-        android:layout_weight="1">
+        android:layout_height="match_parent"
+        android:layout_marginTop="10dp"
+        android:scrollbars="vertical">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center_horizontal">
-
-            <Button
-                android:id="@+id/btn_menu1_recommend"
-                android:layout_width="120dp"
-                android:layout_height="120dp"
-                android:layout_marginRight="10dp"
-                android:layout_toLeftOf="@id/btn_menu1_my_board"
-                android:background="@drawable/ic_oval"
-                android:text="추천글" />
-
-            <Button
-                android:id="@+id/btn_menu1_my_board"
-                android:layout_width="120dp"
-                android:layout_height="120dp"
-                android:layout_centerHorizontal="true"
-                android:background="@drawable/ic_oval"
-                android:text="내가 쓴 글" />
-
-            <Button
-                android:id="@+id/btn_menu1_my_chat"
-                android:layout_width="120dp"
-                android:layout_height="120dp"
-                android:layout_marginLeft="10dp"
-                android:layout_toRightOf="@id/btn_menu1_my_board"
-                android:background="@drawable/ic_oval"
-                android:text="참여한 채팅" />
-
-        </LinearLayout>
-    </RelativeLayout>
+    </android.support.v7.widget.RecyclerView>
+    -->
 </LinearLayout>
