--- a/app/src/main/res/layout/fragment_menu3.xml
+++ b/app/src/main/res/layout/fragment_menu3.xml
@@ -3,85 +3,69 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/lightGray"
-    android:orientation="vertical">
-
-    <TextView
-        android:id="@+id/text_view_board_title"
-        android:layout_width="match_parent"
-        android:layout_height="56dp"
-        android:background="@drawable/textview"
-        android:gravity="center_vertical"
-        android:paddingLeft="10dp"
-        android:text="독후감 게시판"
-        android:textColor="@color/blackSoft"
-        android:textSize="16dp" />
+    android:background="@color/white">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_Board"
         android:layout_width="match_parent"
-        android:layout_height="500dp"
-        android:layout_below="@id/text_view_board_title"
-        android:layout_marginTop="30dp"
+        android:layout_height="match_parent"
         app:layoutManager="android.support.v7.widget.LinearLayoutManager" />
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab_search"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/fab_write"
+        android:layout_marginRight="15sp"
+        android:layout_marginBottom="10dp"
+        android:layout_alignParentRight="true"
+        android:backgroundTint="@color/primary"
+        android:src="@drawable/ic_search"
+        android:visibility="invisible"
+        app:borderWidth="0dp"
+        app:elevation="6dp"
+        app:pressedTranslationZ="12dp" />
 
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/fab_search"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|end"
-            android:layout_marginRight="15sp"
-            android:layout_marginBottom="160dp"
-            android:backgroundTint="@color/primary"
-            android:src="@drawable/ic_search"
-            android:visibility="invisible"
-            app:borderWidth="0dp"
-            app:elevation="6dp"
-            app:pressedTranslationZ="12dp" />
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab_write"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/fab_recommend"
+        android:layout_marginRight="15sp"
+        android:layout_marginBottom="10dp"
+        android:layout_alignParentRight="true"
+        android:backgroundTint="@color/primary"
+        android:src="@drawable/ic_write"
+        android:visibility="invisible"
+        app:borderWidth="0dp"
+        app:elevation="6dp"
+        app:pressedTranslationZ="12dp" />
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab_recommend"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/fab_add"
+        android:layout_marginRight="15sp"
+        android:layout_marginBottom="10dp"
+        android:layout_alignParentRight="true"
+        android:backgroundTint="@color/primary"
+        android:src="@drawable/ic_recommend"
+        android:visibility="invisible"
+        app:borderWidth="0dp"
+        app:elevation="6dp"
+        app:pressedTranslationZ="12dp" />
 
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/fab_write"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|end"
-            android:layout_marginRight="15sp"
-            android:layout_marginBottom="90dp"
-            android:backgroundTint="@color/primary"
-            android:src="@drawable/ic_write"
-            android:visibility="invisible"
-            app:borderWidth="0dp"
-            app:elevation="6dp"
-            app:pressedTranslationZ="12dp" />
-
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/fab_recommend"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|end"
-            android:layout_marginRight="15sp"
-            android:layout_marginBottom="230dp"
-            android:backgroundTint="@color/primary"
-            android:src="@drawable/ic_recommend"
-            android:visibility="invisible"
-            app:borderWidth="0dp"
-            app:elevation="6dp"
-            app:pressedTranslationZ="12dp" />
-
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/fab_add"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|end"
-            android:layout_margin="15sp"
-            android:backgroundTint="@color/primary"
-            android:src="@drawable/ic_add"
-            app:borderWidth="0dp" />
-
-    </FrameLayout>
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab_add"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginRight="15dp"
+        android:layout_marginBottom="15dp"
+        android:backgroundTint="@color/primary"
+        android:src="@drawable/ic_add"
+        app:borderWidth="0dp" />
 
 </RelativeLayout>
