--- a/app/src/main/res/layout/item_board_book.xml
+++ b/app/src/main/res/layout/item_board_book.xml
@@ -1,68 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="8dp"
-    app:cardCornerRadius="2dp"
-    app:cardElevation="2dp"
-    app:cardMaxElevation="2dp"
-    app:cardPreventCornerOverlap="true"
-    app:cardUseCompatPadding="true">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <RelativeLayout
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        app:cardCornerRadius="2dp">
 
-        <ImageView
-            android:id="@+id/iv_board_item_thumbnail"
-            android:layout_width="65dp"
-            android:layout_height="90dp"
-            android:scaleType="fitXY" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/text_view_board_item_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="10dp"
-            android:layout_toRightOf="@id/iv_board_item_thumbnail"
-            android:text="반갑습니다"
-            android:textColor="@color/blackSoft"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            tools:ignore="HardcodedText" />
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/text_view_board_item_title"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="20dp"
-            android:layout_toRightOf="@id/iv_board_item_thumbnail"
-            android:orientation="horizontal">
+            <ImageView
+                android:id="@+id/iv_board_item_thumbnail"
+                android:layout_width="65dp"
+                android:layout_height="80dp"
+                android:scaleType="fitXY" />
 
             <TextView
-                android:id="@+id/text_view_board_item_name"
-                android:layout_width="140dp"
+                android:id="@+id/text_view_board_item_title"
+                android:layout_width="230dp"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="20dp"
-                android:drawableStart="@drawable/ic_person"
-                android:text="Name"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
+                android:text="반갑습니다하이요강찬종입니다"
+                android:maxLines="1"
+                android:ellipsize="end"
                 android:textColor="@color/blackSoft"
-                android:textSize="12sp"
-                tools:ignore="HardCodedText" />
+                android:layout_toRightOf="@id/iv_board_item_thumbnail"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                tools:ignore="HardcodedText" />
 
-            <TextView
-                android:id="@+id/text_view_board_item_time"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:drawableStart="@drawable/ic_time"
-                android:gravity="center"
-                android:text="0000-00-00 00:00"
-                android:textSize="12sp" />
+                android:layout_below="@id/text_view_board_item_title"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_toRightOf="@id/iv_board_item_thumbnail"
+                android:orientation="horizontal">
 
-        </LinearLayout>
-    </RelativeLayout>
-</android.support.v7.widget.CardView>
+                <TextView
+                    android:id="@+id/text_view_board_item_name"
+                    android:layout_width="120dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="10dp"
+                    android:drawableStart="@drawable/ic_person"
+                    android:text="Name"
+                    android:textColor="@color/blackSoft"
+                    android:maxLines ="1"
+                    android:ellipsize="end"
+                    android:textSize="12sp"
+                    tools:ignore="HardCodedText" />
+
+                <TextView
+                    android:id="@+id/text_view_board_item_time"
+                    android:layout_width="110dp"
+                    android:layout_height="wrap_content"
+                    android:drawableStart="@drawable/ic_time"
+                    android:gravity="center"
+                    android:text=" 00-00 00:00 "
+                    android:textSize="12sp" />
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:id="@+id/text_view_board_item_recommend"
+                        android:layout_width="60dp"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentRight="true"
+                        android:drawableStart="@drawable/ic_thumb_up"
+                        android:gravity="center"
+                        android:text="0"
+                        android:textSize="12sp" />
+                </RelativeLayout>
+            </LinearLayout>
+        </RelativeLayout>
+    </android.support.v7.widget.CardView>
+</RelativeLayout>
