--- a/app/src/main/res/layout/item_notice.xml
+++ b/app/src/main/res/layout/item_notice.xml
@@ -4,12 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="8dp"
-    app:cardCornerRadius="2dp"
-    app:cardElevation="2dp"
-    app:cardMaxElevation="2dp"
-    app:cardPreventCornerOverlap="true"
-    app:cardUseCompatPadding="true">
+    app:cardCornerRadius="2dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -28,6 +23,7 @@
             tools:ignore="HardcodedText" />
 
         <LinearLayout
+            android:id="@+id/ll_notice1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/text_view_notice_item_title"
@@ -56,5 +52,15 @@
                 android:textSize="12sp" />
 
         </LinearLayout>
+        <TextView
+            android:id="@+id/text_view_notice_item_contents"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/ll_notice1"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp"
+            android:text="공지사항입니다."
+            android:textStyle="bold"
+            />
     </RelativeLayout>
 </android.support.v7.widget.CardView>
