--- a/app/src/main/res/layout/item_reply_board.xml
+++ b/app/src/main/res/layout/item_reply_board.xml
@@ -3,14 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="8dp"
-    app:cardPreventCornerOverlap="true">
+    android:layout_height="wrap_content">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/lightGray"
+        android:background="@color/white"
         android:orientation="vertical">
 
         <LinearLayout
@@ -56,7 +54,7 @@
             android:layout_height="wrap_content"
             android:layout_marginRight="10dp"
             android:layout_gravity="right"
-            android:layout_marginTop="10dp"
-            android:text="0000-00-00 00:00" />
+
+            android:text="00-00 00:00" />
     </LinearLayout>
 </android.support.v7.widget.CardView>
