--- a/app/src/main/res/layout/activity_book_maraton.xml
+++ b/app/src/main/res/layout/activity_book_maraton.xml
@@ -45,7 +45,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="@drawable/textview"
-                android:text="책 추가 +" />
+                android:text="리스트 추가"  />
 
             <Button
                 android:id="@+id/btn_maratonbook_add_search"
@@ -53,7 +53,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="@drawable/textview"
-                android:text="책 검색" />
+                android:text="책표지 검색" />
 
             <Button
                 android:id="@+id/btn_delete_maratonList"
