--- a/app/src/main/res/layout/activity_board_result.xml
+++ b/app/src/main/res/layout/activity_board_result.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/white"
+    android:orientation="vertical">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar_board_result"
@@ -12,159 +14,130 @@
         android:elevation="1dp"
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
+        <TextView
+            android:id="@+id/text_view_result_pageTitle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="게시판"
+            android:textStyle="bold"
+            android:textSize="20sp"/>
     </android.support.v7.widget.Toolbar>
 
-    <RelativeLayout
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/toolbar_board_result"
-        android:background="@color/white">
-
-        <RelativeLayout
-            android:id="@+id/layout_board_big1"
+        android:layout_weight="1"
+        android:scrollbars="vertical">
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <RelativeLayout
-                android:id="@+id/layout_result"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/primary">
-
+                android:layout_height="100dp"
+                android:orientation="horizontal"
+                android:background="@color/lightGray">
                 <ImageView
                     android:id="@+id/iv_result"
                     android:layout_width="65dp"
                     android:layout_height="80dp"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginBottom="20dp" />
-
-                <TextView
-                    android:id="@+id/text_view_result_book_title"
-                    android:layout_width="wrap_content"
+                    android:layout_margin="10dp" />
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_alignTop="@id/iv_result"
-                    android:layout_toRightOf="@id/iv_result"
-                    android:text=" 책 제목"
-                    android:textColor="@color/blackSoft"
-                    android:textSize="22dp" />
+                    android:orientation="vertical">
+                    <TextView
+                        android:id="@+id/text_view_result_book_title"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:text="책 제목"
+                        android:maxLines="1"
+                        android:ellipsize="end"
+                        android:textColor="@color/blackSoft"
+                        android:textSize="22sp" />
 
-                <TextView
-                    android:id="@+id/text_view_result_author"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/text_view_result_book_title"
-                    android:layout_alignLeft="@id/text_view_result_book_title"
-                    android:layout_marginLeft="7dp"
-                    android:text="책 저자"
-                    android:textColor="@color/blackSoft"
-                    android:textSize="15dp" />
-
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:id="@+id/layout_result_middle"
+                    <TextView
+                        android:id="@+id/text_view_result_author"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="책 저자"
+                        android:textColor="@color/blackSoft"
+                        android:maxLines="1"
+                        android:ellipsize="end"
+                        android:textSize="15sp" />
+                </LinearLayout>
+            </LinearLayout>
+            <TextView
+                android:id="@+id/text_view_result_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:text="글 제목"
+                android:textColor="@color/blackSoft"
+                android:textSize="22sp" />
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/layout_result">
-
-                <TextView
-                    android:id="@+id/text_view_result_title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginTop="10dp"
-                    android:text="글 제목"
-                    android:textColor="@color/blackSoft"
-                    android:textSize="22dp" />
-
+                android:orientation="horizontal">
                 <TextView
                     android:id="@+id/text_view_result_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/text_view_result_title"
-                    android:layout_alignLeft="@id/text_view_result_title"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginRight="15dp"
+                    android:layout_marginLeft="10dp"
                     android:text="닉네임"
                     android:textColor="@color/blackSoft"
                     android:textSize="16dp" />
-
                 <TextView
                     android:id="@+id/text_view_result_date"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/text_view_result_name"
-                    android:layout_alignLeft="@id/text_view_result_name"
                     android:text="0000-00-00 00:00"
                     android:textColor="@color/blackSoft"
                     android:textSize="12dp" />
-
-                <ImageButton
-                    android:id="@+id/btn_board_recommend"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:layout_centerVertical="true"
-                    android:layout_alignParentRight="true"
-                    android:layout_above="@id/text_view_result_contents"
-                    android:layout_marginRight="30dp"
-                    android:layout_marginBottom="10dp"
-                    android:background="@drawable/ic_thumb_up" />
-
                 <TextView
                     android:id="@+id/text_view_result_recommend"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignTop="@id/text_view_result_date"
-                    android:layout_marginLeft="30dp"
-                    android:layout_toRightOf="@id/text_view_result_date"
+                    android:layout_marginRight="20dp"
                     android:text="추천 "
+                    android:gravity="right"
+                    android:layout_weight="1"
                     android:textColor="@color/blackSoft"
                     android:textSize="12dp" />
 
-                <View
-                    android:id="@+id/view_result_border"
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:layout_below="@id/text_view_result_date"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginRight="10dp"
-                    android:background="@color/deepGray" />
-
-                <TextView
-                    android:id="@+id/text_view_result_contents"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/view_result_border"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginRight="20dp"
-                    android:scrollbars="vertical"
-                    android:text="글 내용"
-                    android:textColor="@color/blackSoft" />
-
-            </RelativeLayout>
-
-            <LinearLayout
-                android:id="@+id/layout_result_btns"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/layout_result_middle"
-                android:layout_marginTop="20dp"
-                android:gravity="center_horizontal"
-                android:orientation="horizontal">
-
 
             </LinearLayout>
-        </RelativeLayout>
+            <View
+                android:id="@+id/view_result_border"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="10dp"
+                android:background="@color/deepGray" />
+            <ImageView
+                android:id="@+id/iv_result_photos"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="10dp" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/layout_board_big1"
-            android:layout_marginLeft="10dp"
-            android:layout_above="@id/layout_reply"
-            android:orientation="vertical">
-
+            <TextView
+                android:id="@+id/text_view_result_contents"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="20dp"
+                android:text="글 내용"
+                android:textColor="@color/blackSoft" />
+            <ImageButton
+                android:id="@+id/btn_board_recommend"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center_horizontal"
+                android:background="@drawable/ic_thumb_up" />
             <View
                 android:id="@+id/view_result_border2"
                 android:layout_width="match_parent"
@@ -172,59 +145,44 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginRight="10dp"
                 android:background="@color/deepGray" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:text="댓글"
-                android:textColor="@color/blackSoft" />
-
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/recycler_Reply"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
+                android:layout_height="match_parent"
                 android:scrollbars="vertical"
+
                 app:layoutManager="android.support.v7.widget.LinearLayoutManager" />
         </LinearLayout>
-
-        <RelativeLayout
-            android:id="@+id/layout_reply"
-            android:layout_width="match_parent"
+    </ScrollView>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:orientation="horizontal"
+        android:background="@color/lightGray">
+        <TextView
+            android:id="@+id/text_view_reply_name"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_alignParentBottom="true"
-            android:background="@color/lightGray">
-
-            <TextView
-                android:id="@+id/text_view_reply_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="작성자"
-                android:textColor="@color/blackSoft"
-                android:layout_centerVertical="true"
-                android:textSize="15dp" />
-
-            <EditText
-                android:id="@+id/et_reply_contents"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_toRightOf="@id/text_view_reply_name"
-                android:layout_toLeftOf="@id/btn_reply"
-                android:hint="댓글을 작성해주세요"
-                android:textSize="15dp" />
-
-            <ImageButton
-                android:id="@+id/btn_reply"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:background="@drawable/ic_send"
-                android:backgroundTintMode="@color/white"
-                />
-
-        </RelativeLayout>
-    </RelativeLayout>
-</RelativeLayout>
+            android:text="작성자"
+            android:textColor="@color/blackSoft"
+            android:gravity="center_vertical"
+            android:layout_gravity="center_vertical"
+            android:textSize="15sp" />
+        <EditText
+            android:id="@+id/et_reply_contents"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:hint="댓글을 작성해주세요"
+            android:layout_gravity="center_vertical"
+            android:scrollbars="vertical"
+            android:textSize="15sp" />
+        <ImageButton
+            android:id="@+id/btn_reply"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:background="@drawable/ic_send"
+            android:backgroundTintMode="@color/white" />
+    </LinearLayout>
+</LinearLayout>
