--- a/app/src/main/res/layout/activity_write.xml
+++ b/app/src/main/res/layout/activity_write.xml
@@ -36,76 +36,89 @@
             android:textStyle="bold"/>
     </android.support.v7.widget.Toolbar>
 
-    <EditText
-        android:id="@+id/et_write_title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/toolbar_write"
-        android:layout_marginLeft="5dp"
-        android:hint="제목을 입력하세요"
-        android:textColor="@android:color/black"
-        android:textSize="20sp"
-        tools:ignore="HardCodedText" />
-
-    <LinearLayout
-        android:id="@+id/ll_write3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/et_write_title"
-        android:gravity="right|center_vertical"
-        android:background="@drawable/layoutborder"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/text_view_write_time"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
-            android:text="0000-00-00 00:00"
-            android:textSize="15dp" />
-
-        <TextView
-            android:id="@+id/text_view_write_name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:gravity="center"
-            android:text="작성자"
-            android:textSize="15dp" />
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
+    <RelativeLayout
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_below="@id/ll_write3"
-        android:orientation="vertical">
-
+        android:layout_below="@id/toolbar_write"
+        android:scrollbars="vertical">
         <EditText
-            android:id="@+id/et_write_content"
+            android:id="@+id/et_write_title"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="10"
-            android:hint="내용을 입력하세요"
-            android:layout_below="@id/ll_write3"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
-            android:gravity="top"
-            android:scrollbars="vertical"
+            android:hint="제목을 입력하세요"
             android:textColor="@android:color/black"
-            android:textSize="18sp"
+            android:textSize="20sp"
             tools:ignore="HardCodedText" />
 
+        <LinearLayout
+            android:id="@+id/ll_layout_write"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/et_write_title"
+            android:gravity="right|center_vertical"
+            android:background="@drawable/layoutborder"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/text_view_write_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:text="0000-00-00 00:00"
+                android:textSize="15dp" />
+
+            <TextView
+                android:id="@+id/text_view_write_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:gravity="center"
+                android:text="작성자"
+                android:textSize="15dp" />
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/ll_layout_write2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/ll_layout_write"
+            android:orientation="vertical">
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/username_text_input_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:counterEnabled="true"
+                app:counterMaxLength="500">
+            <EditText
+                android:id="@+id/et_write_content"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:gravity="top"
+                android:hint="내용을 입력하세요"
+                android:lines="2"
+                android:inputType="textMultiLine"
+                android:background="@color/white"
+                android:scrollbars="vertical"
+                android:textColor="@android:color/black"
+                android:textSize="18sp"
+                tools:ignore="HardCodedText" />
+            </android.support.design.widget.TextInputLayout>
+
+
+        </LinearLayout>
         <ImageButton
             android:id="@+id/image_button_camera"
             android:layout_width="20dp"
             android:layout_height="20dp"
+            android:layout_above="@id/iv_write_camera"
             android:background="@drawable/ic_change_photo"/>
-
         <ImageView
             android:id="@+id/iv_write_camera"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            android:layout_weight="1"
-            android:layout_gravity="center"
-            android:visibility="invisible"
-            />
-    </LinearLayout>
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="20dp"/>
+    </RelativeLayout>
 </RelativeLayout>
