--- a/app/src/main/res/layout/fragment_menu1.xml
+++ b/app/src/main/res/layout/fragment_menu1.xml
@@ -4,44 +4,91 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:orientation="vertical">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
-    <RelativeLayout
+        <Button
+            android:id="@+id/btn_interpark"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_weight="1"
+            android:text="인터파크"
+            android:textStyle="bold"
+            android:textSize="17sp"
+            android:background="@color/white"/>
+        <View
+            android:layout_width="2dp"
+            android:layout_height="50dp"
+            android:layout_centerInParent="true"
+            android:background="@color/black"/>
+        <Button
+            android:id="@+id/btn_aladin"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_weight="1"
+            android:text="알라딘"
+            android:textSize="17sp"
+            android:textStyle="bold"
+            android:background="@color/white"/>
+
+    </LinearLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:layout_centerInParent="true"
+        android:background="@color/black" />
+    <LinearLayout
         android:id="@+id/layout_recommend_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp">
+        android:orientation="horizontal">
 
         <Button
             android:id="@+id/btn_recommend_bestseller"
-            android:layout_width="100dp"
+            android:layout_width="0dp"
             android:layout_height="50dp"
-            android:background="@drawable/button"
-            android:text="베스트셀러" />
-
+            android:layout_weight="1"
+            android:background="@color/white"
+            android:text="베스트 셀러" />
+        <View
+            android:layout_width="2dp"
+            android:layout_height="50dp"
+            android:layout_centerInParent="true"
+            android:background="@color/black"/>
         <Button
             android:id="@+id/btn_recommend_new"
-            android:layout_width="100dp"
+            android:layout_width="0dp"
             android:layout_height="50dp"
+            android:layout_weight="1"
             android:layout_toRightOf="@id/btn_recommend_bestseller"
-            android:background="@drawable/button"
-            android:text="신간 도서" />
-
+            android:background="@color/white"
+            android:text="새로나온 책" />
+        <View
+            android:layout_width="2dp"
+            android:layout_height="50dp"
+            android:layout_centerInParent="true"
+            android:background="@color/black"/>
         <Spinner
             android:id="@+id/spinner_recommend_category"
-            android:layout_width="150dp"
+            android:layout_width="0dp"
+            android:layout_weight="1"
             android:layout_height="50dp"
-            android:layout_alignParentEnd="true"
             android:entries="@array/카테고리" />
 
-    </RelativeLayout>
-<!--
+    </LinearLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:layout_centerInParent="true"
+        android:background="@color/black" />
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view_recommend"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="10dp"
         android:scrollbars="vertical">
-
     </android.support.v7.widget.RecyclerView>
-    -->
+
 </LinearLayout>
