--- a/app/src/main/res/layout/item_reply_board.xml
+++ b/app/src/main/res/layout/item_reply_board.xml
@@ -4,57 +4,56 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white"
+        android:layout_marginBottom="5dp"
         android:orientation="vertical">
-
         <LinearLayout
+            android:id="@+id/ll_item_reply_layout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="30dp"
+            android:background="@color/lightGray"
             android:orientation="horizontal">
-
             <ImageView
                 android:id="@+id/iv_reply_image"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_gravity="center_vertical"
+                android:background="@drawable/ic_person"
                 android:layout_marginLeft="5dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="5dp" />
-
+                android:layout_marginRight="5dp" />
             <TextView
                 android:id="@+id/text_view_reply_item_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="6dp"
+                android:layout_marginRight="10dp"
                 android:layout_gravity="center_vertical"
                 android:text="사용자이름"
                 android:textColor="@android:color/black"
-                android:textSize="15sp"
+                android:textSize="16sp"
                 android:textStyle="bold"
                 tools:ignore="HardcodedText" />
-
             <TextView
-                android:id="@+id/text_view_reply_item_content"
-                android:layout_width="match_parent"
+                android:id="@+id/text_view_reply_item_date"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
                 android:layout_gravity="center_vertical"
-                android:text="쓴 댓글"
-                android:textSize="14sp"
-                tools:ignore="HardCodedText" />
-
+                android:layout_marginRight="10dp"
+                android:text="00-00 00:00" />
         </LinearLayout>
-
         <TextView
-            android:id="@+id/text_view_reply_item_date"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="10dp"
-            android:layout_gravity="right"
+            android:id="@+id/text_view_reply_item_content"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginBottom="5dp"
+            android:text="쓴 댓글"
+            android:textSize="14sp"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            tools:ignore="HardCodedText" />
 
-            android:text="00-00 00:00" />
     </LinearLayout>
 </android.support.v7.widget.CardView>
