--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,8 +8,12 @@
         <item name="colorAccent">@color/colorAccent</item>
         <!--  <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item> -->
+    </style>
+    <style name="CustomTheme" parent="ThemeOverlay.AppCompat.ActionBar">
+
 
 
     </style>
+
 
 </resources>
